istioRollout/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo2
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: rollouts-demo-canary2
      stableService: rollouts-demo-stable2
      trafficRouting:
        istio:
          virtualService:
            name: rollouts-demo-vsvc2
            routes:
            - primary # At least one route is required
      steps:
      - setWeight: 5
      - pause: {}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo2
  template:
    metadata:
      labels:
        app: rollouts-demo2
        istio-injection: enabled
    spec:
      containers:
      - name: rollouts-demo2
        image: argoproj/rollouts-demo:yellow
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
