istioRollout/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollouts-demo-vsvc2
spec:
  gateways:
  - rollouts-demo-gateway2
  hosts:
  - rollouts-demo.local
  http:
  - name: primary
    route:
    - destination:
        host: rollouts-demo-stable2
      weight: 100
    - destination:
        host: rollouts-demo-canary2
      weight: 0
